--- a/admintheme/static/admin/css/login.css
+++ b/admintheme/static/admin/css/login.css
@@ -941,16 +941,21 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"],
-.uneditable-input {
+.uneditable-input, p.datetime input.vTimeField, p.datetime input.vDateField {
   width: 80%;
 }
 
 /* line 178, ../scss/sass/forms.scss */
+input.vTimeField, input.vDateField {
+  width: 70%;
+}
+
+/* line 181, ../scss/sass/forms.scss */
 input[type="text"].vForeignKeyRawIdAdminField {
   width: auto;
 }
 
-/* line 183, ../scss/sass/forms.scss */
+/* line 186, ../scss/sass/forms.scss */
 input[type="radio"],
 input[type="checkbox"] {
   margin: 0;
@@ -963,7 +968,7 @@ input[type="checkbox"] {
   margin-left: 180px;
 }
 
-/* line 193, ../scss/sass/forms.scss */
+/* line 196, ../scss/sass/forms.scss */
 input[type="radio"] + label,
 input[type="checkbox"] + label {
   float: none;
@@ -973,7 +978,7 @@ input[type="checkbox"] + label {
   margin-left: 10px;
 }
 
-/* line 207, ../scss/sass/forms.scss */
+/* line 210, ../scss/sass/forms.scss */
 input[type="file"],
 input[type="image"],
 input[type="submit"],
@@ -984,7 +989,7 @@ input[type="checkbox"] {
   width: auto;
 }
 
-/* line 212, ../scss/sass/forms.scss */
+/* line 215, ../scss/sass/forms.scss */
 select,
 input[type="file"] {
   height: 26px;
@@ -994,21 +999,21 @@ input[type="file"] {
   line-height: 26px;
 }
 
-/* line 219, ../scss/sass/forms.scss */
+/* line 222, ../scss/sass/forms.scss */
 select {
   width: 220px;
   background-color: #ffffff;
   border: 1px solid #dddddd;
 }
 
-/* line 226, ../scss/sass/forms.scss */
+/* line 229, ../scss/sass/forms.scss */
 select[multiple],
 select[size] {
   height: auto;
   min-height: 300px;
 }
 
-/* line 234, ../scss/sass/forms.scss */
+/* line 237, ../scss/sass/forms.scss */
 select:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
@@ -1018,31 +1023,31 @@ input[type="checkbox"]:focus {
   outline-offset: -2px;
 }
 
-/* line 241, ../scss/sass/forms.scss */
+/* line 244, ../scss/sass/forms.scss */
 input:-moz-placeholder,
 textarea:-moz-placeholder {
   color: #999999;
 }
 
-/* line 246, ../scss/sass/forms.scss */
+/* line 249, ../scss/sass/forms.scss */
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
   color: #999999;
 }
 
-/* line 251, ../scss/sass/forms.scss */
+/* line 254, ../scss/sass/forms.scss */
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   color: #999999;
 }
 
-/* line 260, ../scss/sass/forms.scss */
+/* line 263, ../scss/sass/forms.scss */
 .form-row.errors label,
 .form-row.errors .help {
   color: #b94a48;
 }
 
-/* line 268, ../scss/sass/forms.scss */
+/* line 271, ../scss/sass/forms.scss */
 .form-row.errors .checkbox,
 .form-row.errors .radio,
 .form-row.errors input,
@@ -1051,7 +1056,7 @@ textarea::-webkit-input-placeholder {
   color: #b94a48;
 }
 
-/* line 274, ../scss/sass/forms.scss */
+/* line 277, ../scss/sass/forms.scss */
 .form-row.errors input,
 .form-row.errors select,
 .form-row.errors textarea {
@@ -1061,7 +1066,7 @@ textarea::-webkit-input-placeholder {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-/* line 281, ../scss/sass/forms.scss */
+/* line 284, ../scss/sass/forms.scss */
 .form-row.errors input:focus,
 .form-row.errors select:focus,
 .form-row.errors textarea:focus {
@@ -1071,7 +1076,7 @@ textarea::-webkit-input-placeholder {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
 }
 
-/* line 287, ../scss/sass/forms.scss */
+/* line 290, ../scss/sass/forms.scss */
 .errornote, .errorlist {
   color: #b94a48;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
@@ -1079,7 +1084,7 @@ textarea::-webkit-input-placeholder {
   background-color: #F2DEDE;
 }
 
-/* line 294, ../scss/sass/forms.scss */
+/* line 297, ../scss/sass/forms.scss */
 .errornote {
   padding: 8px 35px 8px 14px;
   margin-bottom: 10px;
@@ -1099,17 +1104,17 @@ textarea::-webkit-input-placeholder {
   content: "\f05e";
 }
 
-/* line 301, ../scss/sass/forms.scss */
+/* line 304, ../scss/sass/forms.scss */
 .errorlist {
   padding: 0 35px 0 14px;
   margin: 4px 0;
 }
-/* line 304, ../scss/sass/forms.scss */
+/* line 307, ../scss/sass/forms.scss */
 .errorlist li {
   list-style: none;
 }
 
-/* line 312, ../scss/sass/forms.scss */
+/* line 315, ../scss/sass/forms.scss */
 .form-actions {
   padding: 19px 20px 20px;
   margin-top: 20px;
@@ -1117,18 +1122,18 @@ textarea::-webkit-input-placeholder {
   background-color: #f5f5f5;
   border-top: 1px solid #e5e5e5;
 }
-/* line 319, ../scss/sass/forms.scss */
+/* line 322, ../scss/sass/forms.scss */
 .form-actions:before, .form-actions:after {
   display: table;
   line-height: 0;
   content: "";
 }
-/* line 325, ../scss/sass/forms.scss */
+/* line 328, ../scss/sass/forms.scss */
 .form-actions:after {
   clear: both;
 }
 
-/* line 335, ../scss/sass/forms.scss */
+/* line 338, ../scss/sass/forms.scss */
 .help {
   color: #595959;
   display: block;
@@ -1148,13 +1153,13 @@ textarea::-webkit-input-placeholder {
   content: "\f05a";
 }
 
-/* line 346, ../scss/sass/forms.scss */
+/* line 349, ../scss/sass/forms.scss */
 .help.help-tooltip {
   margin: 0;
   display: inline-block;
 }
 
-/* line 355, ../scss/sass/forms.scss */
+/* line 358, ../scss/sass/forms.scss */
 input.search-query {
   padding-right: 14px;
   padding-right: 4px \9;
@@ -1169,31 +1174,31 @@ input.search-query {
   border-radius: 15px;
 }
 
-/* line 366, ../scss/sass/forms.scss */
+/* line 369, ../scss/sass/forms.scss */
 .form-row {
   padding-bottom: 10px;
   margin-bottom: 10px;
   border-bottom: 1px solid #dddddd;
 }
 
-/* line 371, ../scss/sass/forms.scss */
+/* line 374, ../scss/sass/forms.scss */
 .form-row:last-child {
   border-bottom: 0;
   padding-bottom: 0;
 }
 
-/* line 376, ../scss/sass/forms.scss */
+/* line 379, ../scss/sass/forms.scss */
 .form-row:first-child {
   margin-top: 10px;
 }
 
-/* line 380, ../scss/sass/forms.scss */
+/* line 383, ../scss/sass/forms.scss */
 h2 + .form-row {
   margin-top: 10px;
   -webkit-margin-top-collapse: separate;
 }
 
-/* line 385, ../scss/sass/forms.scss */
+/* line 388, ../scss/sass/forms.scss */
 a.related-lookup {
   color: inherit;
   text-decoration: inherit;
@@ -1204,7 +1209,7 @@ a.related-lookup:active, a.related-lookup:focus {
   outline: none;
 }
 
-/* line 389, ../scss/sass/forms.scss */
+/* line 392, ../scss/sass/forms.scss */
 .submit-row {
   min-height: 20px;
   padding: 19px;
@@ -1228,20 +1233,20 @@ a.related-lookup:active, a.related-lookup:focus {
   border-color: #ddd;
   border-color: rgba(0, 0, 0, 0.15);
 }
-/* line 394, ../scss/sass/forms.scss */
+/* line 397, ../scss/sass/forms.scss */
 .submit-row input {
   margin: 0 0 0 5px;
 }
-/* line 397, ../scss/sass/forms.scss */
+/* line 400, ../scss/sass/forms.scss */
 .submit-row p.deletelink-box {
   float: left;
   margin: 0;
 }
-/* line 401, ../scss/sass/forms.scss */
+/* line 404, ../scss/sass/forms.scss */
 .submit-row .default {
   float: right;
 }
-/* line 404, ../scss/sass/forms.scss */
+/* line 407, ../scss/sass/forms.scss */
 .submit-row .deletelink {
   display: inline-block;
   *display: inline;
@@ -1344,7 +1349,7 @@ a.related-lookup:active, a.related-lookup:focus {
   transition-duration: 0.1s;
 }
 
-/* line 409, ../scss/sass/forms.scss */
+/* line 412, ../scss/sass/forms.scss */
 .inline-group {
   padding: 0;
   border: 1px solid #dddddd;
@@ -1355,7 +1360,7 @@ a.related-lookup:active, a.related-lookup:focus {
   -o-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 414, ../scss/sass/forms.scss */
+/* line 417, ../scss/sass/forms.scss */
 .inline-group h2 {
   line-height: 1.63rem;
   margin: 0;
@@ -1386,12 +1391,12 @@ a.related-lookup:active, a.related-lookup:focus {
   outline: none;
 }
 
-/* line 420, ../scss/sass/forms.scss */
+/* line 423, ../scss/sass/forms.scss */
 .inline-group .aligned label {
   width: 8em;
 }
 
-/* line 424, ../scss/sass/forms.scss */
+/* line 427, ../scss/sass/forms.scss */
 .inline-related {
   position: relative;
   -webkit-border-radius: 4px;
@@ -1402,16 +1407,16 @@ a.related-lookup:active, a.related-lookup:focus {
   background: #fff;
   border-bottom: 1px solid #dddddd;
 }
-/* line 428, ../scss/sass/forms.scss */
+/* line 431, ../scss/sass/forms.scss */
 .inline-related td.delete input[type="checkbox"] {
   margin-left: 0;
 }
-/* line 431, ../scss/sass/forms.scss */
+/* line 434, ../scss/sass/forms.scss */
 .inline-related .form-row {
   margin: 0;
   padding: 3px 0;
 }
-/* line 435, ../scss/sass/forms.scss */
+/* line 438, ../scss/sass/forms.scss */
 .inline-related h3 {
   margin: 0;
   color: #666;
@@ -1419,23 +1424,23 @@ a.related-lookup:active, a.related-lookup:focus {
   font-size: .7rem;
   background: #fff;
 }
-/* line 441, ../scss/sass/forms.scss */
+/* line 444, ../scss/sass/forms.scss */
 .inline-related h3 span.delete {
   float: right;
 }
 
-/* line 448, ../scss/sass/forms.scss */
+/* line 451, ../scss/sass/forms.scss */
 .inline-related.tabular {
   border-bottom: 0;
 }
 
-/* line 452, ../scss/sass/forms.scss */
+/* line 455, ../scss/sass/forms.scss */
 .inline-related h3 span.delete label {
   margin-left: 2px;
   font-size: 11px;
 }
 
-/* line 457, ../scss/sass/forms.scss */
+/* line 460, ../scss/sass/forms.scss */
 .inline-related fieldset {
   margin: 0;
   background: #fff;
@@ -1447,7 +1452,7 @@ a.related-lookup:active, a.related-lookup:focus {
   border-radius: 4px;
 }
 
-/* line 464, ../scss/sass/forms.scss */
+/* line 467, ../scss/sass/forms.scss */
 .inline-related fieldset.module h3 {
   margin: 0;
   padding: 2px 5px 3px 5px;
@@ -1458,40 +1463,40 @@ a.related-lookup:active, a.related-lookup:focus {
   color: #fff;
 }
 
-/* line 474, ../scss/sass/forms.scss */
+/* line 477, ../scss/sass/forms.scss */
 .inline-group .tabular fieldset.module {
   border: none;
 }
 
-/* line 478, ../scss/sass/forms.scss */
+/* line 481, ../scss/sass/forms.scss */
 .inline-related.tabular fieldset.module table {
   width: 100%;
 }
 
-/* line 482, ../scss/sass/forms.scss */
+/* line 485, ../scss/sass/forms.scss */
 .last-related fieldset {
   border: none;
 }
 
-/* line 486, ../scss/sass/forms.scss */
+/* line 489, ../scss/sass/forms.scss */
 .inline-group .tabular tr.has_original td {
   padding-top: 2em;
 }
 
-/* line 490, ../scss/sass/forms.scss */
+/* line 493, ../scss/sass/forms.scss */
 .inline-group .tabular tr td.original {
   padding: 2px 0 0 0;
   width: 0;
   _position: relative;
 }
 
-/* line 496, ../scss/sass/forms.scss */
+/* line 499, ../scss/sass/forms.scss */
 .inline-group .tabular th.original {
   width: 0px;
   padding: 0;
 }
 
-/* line 501, ../scss/sass/forms.scss */
+/* line 504, ../scss/sass/forms.scss */
 .inline-group .tabular td.original p {
   position: absolute;
   left: 0;
@@ -1504,20 +1509,20 @@ a.related-lookup:active, a.related-lookup:focus {
   _width: 700px;
 }
 
-/* line 513, ../scss/sass/forms.scss */
+/* line 516, ../scss/sass/forms.scss */
 .inline-group ul.tools {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-/* line 519, ../scss/sass/forms.scss */
+/* line 522, ../scss/sass/forms.scss */
 .inline-group ul.tools li {
   display: inline;
   padding: 0 5px;
 }
 
-/* line 525, ../scss/sass/forms.scss */
+/* line 528, ../scss/sass/forms.scss */
 .inline-group div.add-row,
 .inline-group .tabular tr.add-row td {
   color: #666;
@@ -1532,13 +1537,13 @@ a.related-lookup:active, a.related-lookup:focus {
   border-radius: 0 0 4px 4px;
 }
 
-/* line 534, ../scss/sass/forms.scss */
+/* line 537, ../scss/sass/forms.scss */
 .inline-group .tabular tr.add-row td {
   padding: 4px 5px 3px;
   border-bottom: none;
 }
 
-/* line 541, ../scss/sass/forms.scss */
+/* line 544, ../scss/sass/forms.scss */
 .inline-group ul.tools a.add,
 .inline-group div.add-row a,
 .inline-group .tabular tr.add-row td a {
@@ -1639,7 +1644,7 @@ a.related-lookup:active, a.related-lookup:focus {
   content: "\f067";
 }
 
-/* line 546, ../scss/sass/forms.scss */
+/* line 549, ../scss/sass/forms.scss */
 .inline-deletelink {
   display: inline-block;
   *display: inline;
@@ -1751,7 +1756,7 @@ a.related-lookup:active, a.related-lookup:focus {
   transition-duration: 0.1s;
 }
 
-/* line 552, ../scss/sass/forms.scss */
+/* line 555, ../scss/sass/forms.scss */
 .empty-form {
   display: none;
 }
